fix: address backup buttons color in dark mode (WPB-7186) (#17105)
* fix: address backup buttons color in dark mode

* address import page

* clean up css

--- a/src/style/content/history-export-import.less
+++ b/src/style/content/history-export-import.less
@@ -15,31 +15,17 @@
     }
   }
 
-  .cancel-button {
-    .button-reset-default;
-
-    margin-bottom: 56px;
-    cursor: pointer;
-    font-size: @font-size-medium;
-    font-weight: @font-weight-regular;
-    line-height: @line-height-sm;
-    user-select: none;
-  }
-
   .history-message {
     margin: auto;
     text-align: center;
 
-    check-icon {
+    svg {
+      width: 32px;
+      height: 32px;
       margin-bottom: 16px;
 
-      svg {
-        width: 32px;
-        height: 32px;
-
-        path {
-          fill: @w-blue;
-        }
+      path {
+        fill: var(--success-color);
       }
     }
 
